<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
              android:layout_width="match_parent"
              android:layout_height="match_parent"
              android:gravity="center_horizontal"
              android:orientation="vertical">

    <ScrollView
        android:id="@+id/scrollView2"
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:gravity="center_horizontal"
            android:orientation="vertical">

            <EditText
                android:id="@+id/et_enter_code"
                android:layout_width="@dimen/profile_change_bundle_cellphone_et_w"
                android:layout_height="wrap_content"
                android:layout_marginBottom="@dimen/profile_change_bundle_cellphone_et_space"
                android:layout_marginTop="@dimen/profile_change_bundle_cellphone2_et_top_space"
                android:background="@mipmap/img_square"
                android:ems="16"
                android:hint="@string/profile_change_bundle_cellphone_enter_code"
                android:paddingLeft="@dimen/profile_change_bundle_cellphone1_enter_pwd_lr_space"
                android:paddingRight="@dimen/profile_change_bundle_cellphone1_enter_pwd_lr_space"
                android:textColor="@color/color_191919"
                android:textColorHint="@color/color_9b9b9b"
                android:textSize="@dimen/profile_change_bundle_cellphone_et_sp"
                android:inputType="number"/>

            <Button
                android:id="@+id/btn_change_confirm"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:background="@mipmap/btn_orange"
                android:text="@string/profile_change_bundle_cellphone_btn_submit_code"
                android:textColor="@android:color/white"
                android:textSize="@dimen/profile_change_bundle_cellphone_btn_sp"/>

            <TextView
                android:id="@+id/tv_countdown_second"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginBottom="@dimen/profile_change_bundle_cellphone2_enter_code_countdown_bottom_space"
                android:layout_marginTop="@dimen/profile_change_bundle_cellphone2_enter_code_countdown_top_space"
                android:text="@string/profile_change_bundle_cellphone_countdown"
                android:textAppearance="?android:attr/textAppearanceMedium"
                android:textColor="@android:color/black"
                android:textSize="@dimen/profile_change_bundle_cellphone_countdown_sp"/>

            <TextView
                android:id="@+id/textView25"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/profile_change_bundle_cellphone_attention_cannot_receive"
                android:textAppearance="?android:attr/textAppearanceSmall"
                android:textColor="@color/color_c82915"/>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:gravity="center_horizontal"
                android:orientation="horizontal">

                <TextView
                    android:id="@+id/textView27"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/profile_change_bundle_cellphone_attention_connect"
                    android:textAppearance="?android:attr/textAppearanceSmall"
                    android:textColor="@color/color_c82915"/>

                <TextView
                    android:id="@+id/textView29"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/profile_change_bundle_cellphone_attention_mail"
                    android:textAppearance="?android:attr/textAppearanceSmall"
                    android:textColor="@color/color_094af2"/>
            </LinearLayout>

        </LinearLayout>
    </ScrollView>
</LinearLayout>