<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
              android:layout_width="match_parent"
              android:layout_height="match_parent"
              android:background="@color/color_E3E3E3"
              android:orientation="vertical">

    <LinearLayout
        android:id="@+id/ll_personal_header"
        android:layout_width="match_parent"
        android:layout_height="@dimen/personal_header_h"
        android:background="#ec6c00"
        android:gravity="center_vertical"
        android:orientation="horizontal">

        <ImageButton
            android:id="@+id/ibtn_personal_header"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginLeft="@dimen/personal_header_left_space"
            android:layout_marginRight="@dimen/personal_header_right_space"
            android:background="@drawable/selector_btn_personal"/>

        <Button
            android:id="@+id/btn_personal_header_signinup"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:background="@android:color/transparent"
            android:text="@string/personal_header_signinup"
            android:textColor="@android:color/white"
            android:textSize="@dimen/personal_header_sp"/>

        <ImageButton
            android:id="@+id/ibtn_personal_header_message"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentRight="true"
            android:layout_gravity="top"
            android:layout_marginLeft="@dimen/personal_header_message_left_space"
            android:layout_marginTop="@dimen/personal_header_message_top_space"
            android:background="@mipmap/navi_btn_message"/>
    </LinearLayout>

    <LinearLayout
        android:id="@+id/ll_personal_order"
        android:layout_width="match_parent"
        android:layout_height="@dimen/personal_order_h"
        android:layout_marginBottom="@dimen/personal_block_space"
        android:layout_marginTop="@dimen/personal_block_space"
        android:background="@android:color/white"
        android:orientation="vertical">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="@dimen/personal_order_title_h"
            android:gravity="center_vertical"
            android:orientation="horizontal">

            <TextView
                android:id="@+id/textView"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginLeft="@dimen/personal_order_title_left_space"
                android:text="@string/personal_order_my_order"
                android:textAppearance="?android:attr/textAppearanceMedium"
                android:textColor="@color/color_191919"
                android:textSize="@dimen/personal_title_sp"
                />

            <Button
                android:id="@+id/btn_personal_order_check_all"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginLeft="@dimen/personal_order_all_left_space"
                android:background="@android:color/transparent"
                android:drawablePadding="@dimen/personal_order_all_right_space"
                android:drawableRight="@mipmap/bn_go_gray"
                android:text="@string/personal_order_all_order"
                android:textColor="@color/color_d8d8d8"
                />

        </LinearLayout>

        <ImageView
            android:id="@+id/imageView2"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:src="@mipmap/img_line_1000"/>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:gravity="center_vertical|center_horizontal"
            android:orientation="horizontal">

            <Button
                android:id="@+id/btn_personal_waiting_pay"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginLeft="@dimen/personal_order_space"
                android:layout_weight="1"
                android:background="@android:color/transparent"
                android:drawableTop="@mipmap/img_icon_wait_to_pay"
                android:text="@string/personal_order_waiting_pay"
                android:textColor="@color/color_191919"
                android:textSize="@dimen/personal_order_txt_sp"/>

            <Button
                android:id="@+id/btn_personal_wating_send"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:background="@android:color/transparent"
                android:drawableTop="@mipmap/img_icon_wait_to_send"
                android:text="@string/personal_order_waiting_send"
                android:textColor="@color/color_191919"
                android:textSize="@dimen/personal_order_txt_sp"
                />

            <Button
                android:id="@+id/btn_personal_waiting_receive"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:background="@android:color/transparent"
                android:drawableTop="@mipmap/img_icon_wait_to_receive"
                android:text="@string/personal_order_waiting_receive"
                android:textColor="@color/color_191919"
                android:textSize="@dimen/personal_order_txt_sp"
                />

            <Button
                android:id="@+id/btn_personal_waiting_rate"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:background="@android:color/transparent"
                android:drawableTop="@mipmap/img_icon_wait_to_rate"
                android:text="@string/personal_order_waiting_rate"
                android:textColor="@color/color_191919"
                android:textSize="@dimen/personal_order_txt_sp"
                />

            <Button
                android:id="@+id/btn_personal_waiting_refund"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginRight="@dimen/personal_order_space"
                android:layout_weight="1"
                android:background="@android:color/transparent"
                android:drawableTop="@mipmap/img_icon_refund"
                android:text="@string/personal_order_waiting_refund"
                android:textColor="@color/color_191919"
                android:textSize="@dimen/personal_order_txt_sp"/>
        </LinearLayout>
    </LinearLayout>

    <LinearLayout
        android:id="@+id/ll_personal_wallet"
        android:layout_width="match_parent"
        android:layout_height="@dimen/personal_wallet_h"
        android:background="#ffffff"
        android:orientation="vertical">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="@dimen/personal_order_title_h"
            android:gravity="center_vertical"
            android:orientation="horizontal">

            <TextView
                android:id="@+id/tv_personal_wallet_title"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginLeft="@dimen/personal_order_title_left_space"
                android:text="@string/personal_wallet"
                android:textAppearance="?android:attr/textAppearanceMedium"
                android:textColor="@color/color_191919"
                android:textSize="@dimen/personal_title_sp"/>


        </LinearLayout>

        <ImageView
            android:id="@+id/imageView3"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:src="@mipmap/img_line_1000"/>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:gravity="center_vertical"
            android:orientation="horizontal">

            <ImageView
                android:id="@+id/iv_personal_balance"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginLeft="@dimen/personal_wallet_balance_left_space"
                android:layout_marginRight="@dimen/personal_wallet_balance_right_space"
                android:src="@mipmap/img_icon_balance"/>

            <TextView
                android:id="@+id/tv_personal_money"
                android:layout_width="@dimen/personal_wallet_balance_w"
                android:layout_height="wrap_content"
                android:text="@string/personal_wallet_balance"
                android:textAppearance="?android:attr/textAppearanceMedium"
                android:textColor="@color/color_191919"
                android:textSize="@dimen/personal_wallet_txt_sp"/>

            <ImageButton
                android:id="@+id/ibtn_personal_question"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginLeft="@dimen/personal_wallet_question_left_space"
                android:layout_marginRight="@dimen/personal_wallet_question_right_space"
                android:background="@mipmap/img_question_mark"/>

            <Button
                android:id="@+id/btn_personal_trade_detail"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:background="@android:color/transparent"
                android:drawableLeft="@mipmap/img_icon_trade_detial"
                android:drawablePadding="@dimen/personal_wallet_detail_right_space"
                android:text="@string/personal_wallet_detail"
                android:textSize="@dimen/personal_wallet_txt_sp"
                android:textColor="@color/color_191919"/>

        </LinearLayout>

    </LinearLayout>
</LinearLayout>