<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
              android:layout_width="match_parent"
              android:layout_height="match_parent"
              android:gravity="center_horizontal"
              android:orientation="vertical">

    <ScrollView
        android:id="@+id/scrollView2"
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="vertical"
            android:gravity="center_horizontal">

            <TextView
                android:id="@+id/tv1"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginBottom="@dimen/profile_change_bundle_cellphone1_attention_bottom_space"
                android:layout_marginTop="@dimen/profile_change_bundle_cellphone1_attention_top_space"
                android:text="@string/profile_change_bundle_cellphone_attention"
                android:textAppearance="?android:attr/textAppearanceMedium"
                android:textColor="@color/color_f33d26"
                android:textSize="@dimen/profile_change_bundle_cellphone1_attention_sp"/>

            <TextView
                android:id="@+id/tv2"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/profile_change_bundle_cellphone_attention_content"
                android:textAppearance="?android:attr/textAppearanceMedium"
                android:textColor="@color/color_606469"
                android:textSize="@dimen/profile_change_bundle_cellphone1_attention_content_sp"
                android:gravity="center_horizontal"/>

            <EditText
                android:id="@+id/et_enter_pwd"
                android:layout_width="@dimen/profile_change_bundle_cellphone_et_w"
                android:layout_height="wrap_content"
                android:layout_marginBottom="@dimen/profile_change_bundle_cellphone_et_space"
                android:layout_marginTop="@dimen/profile_change_bundle_cellphone1_btn_top_space"
                android:background="@mipmap/img_square"
                android:ems="16"
                android:hint="@string/profile_change_bundle_cellphone_enter_pwd"
                android:inputType="textPassword"
                android:textColor="@android:color/black"
                android:textColorHint="@color/color_9b9b9b"
                android:textSize="@dimen/profile_change_bundle_cellphone_et_sp"
                android:paddingLeft="@dimen/profile_change_bundle_cellphone1_enter_pwd_lr_space"
                android:paddingRight="@dimen/profile_change_bundle_cellphone1_enter_pwd_lr_space"/>

            <Button
                android:id="@+id/btn_change_confirm"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:background="@mipmap/btn_orange"
                android:text="@string/profile_change_bundle_cellphone_btn_submit"
                android:textColor="@android:color/white"
                android:textSize="@dimen/signup_btn_txt_sp"/>


        </LinearLayout>
    </ScrollView>
</LinearLayout>